[package]
name = "games-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
native-windows-gui = { git = "https://github.com/gabdube/native-windows-gui" }
native-windows-derive = "1.0.5"
directories = "4.0.1"
winapi = "0.3.9"
image = "0.24.3"
systemicons = "0.6.0"
execute = "0.2.11"
